@@ -1,5 +1,7 @@
 
 - OS X: fixed startup on computers that didn't have Poedit installed before
+- fixed translation status color indicator to work correctly in case
+  of plural entries
 
 Version 1.3.7
 -------------
